5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1635_2447.log
== TEST (2019-04-10 13:02:08) 
-- CODE:
x= float(input("Preco:"))
k= float(input("Pagamento:"))
p= x - k
f= k - x
if (x > k):
	j= "Falta " + p
else:
	j= "Troco " + f
print(round(j, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:03:31) 
-- CODE:
x= float(input("Preco:"))
k= float(input("Pagamento:"))
p= x - k
f= k - x
if (x > k):
	j= "Falta " + p
else:
	j= "Troco de " + f
print(round(j, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:04:35) 
-- CODE:
preco= float(input("Preco:"))
pag= float(input("Pagamento:"))
p= preco - pag
f= pag - preco
if (preco > pag):
	j= "Falta " + p
else:
	j= "Troco de " + f
print(round(j, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:04:58) 
-- CODE:
preco= float(input("Preco:"))
pag= float(input("Pagamento:"))
p= preco - pag
f= pag - preco
if (preco > pag):
	j= "Falta ", p
else:
	j= "Troco de ", f
print(round(j, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:08:44) 
-- CODE:
preco= float(input("Preco:"))
pag= float(input("Pagamento:"))
p= preco - pag
f= pag - preco
if (preco > pag):
	print("Falta ", round(p, 2))
else:
	print("Troco de ", round(f, 2))

-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:08:55) 
-- CODE:
preco= float(input("Preco:"))
pag= float(input("Pagamento:"))
p= preco - pag
f= pag - preco
if (preco > pag):
	print("Falta ", round(p, 2))
else:
	print("Troco de ", round(f, 2))

-- EXECUTION TIME:
0.204048
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
